src/test/ui/hrtb/hrtb-exists-forall-fn.stderr
error[E0308]: mismatched types
  --> $DIR/hrtb-exists-forall-fn.rs:17:34
   |
LL |     let _: for<'b> fn(&'b u32) = foo();
   |            -------------------   ^^^^^ expected concrete lifetime, found bound lifetime parameter 'b
   |            |
   |            expected due to this
   |
   = note: expected fn pointer `for<'b> fn(&'b u32)`
              found fn pointer `fn(&u32)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
